# ChangeLog for virtual/perl-Digest-MD5
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Digest-MD5/ChangeLog,v 1.14 2006/10/25 02:26:23 mcummings Exp $

  25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -perl-Digest-MD5-2.33.ebuild:
  Correcting dep

  25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  perl-Digest-MD5-2.33.ebuild:
  Correcting dep

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> perl-Digest-MD5-2.36.ebuild:
  Marked stable on mips.

  18 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
  perl-Digest-MD5-2.36.ebuild:
  Stable on alpha.

  18 Jun 2006; Bryan Østergaard <kloeri@gentoo.org>
  perl-Digest-MD5-2.36.ebuild:
  Stable on ia64.

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  perl-Digest-MD5-2.36.ebuild:
  Stable on amd64 wrt bug #133989

  25 May 2006; Guy Martin <gmsoft@gentoo.org> perl-Digest-MD5-2.36.ebuild:
  Stable on hppa.

  24 May 2006; Michael Hanselmann <hansmi@gentoo.org>
  perl-Digest-MD5-2.36.ebuild:
  Stable on ppc.

  23 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  perl-Digest-MD5-2.36.ebuild:
  Stable on x86 wrt bug #133989.

  23 May 2006; <mcummings@gentoo.org> perl-Digest-MD5-2.36.ebuild:
  Marking stable sparc, bug 133989

  23 May 2006; Markus Rothe <corsair@gentoo.org>
  perl-Digest-MD5-2.36.ebuild:
  Stable on ppc64; bug #133989

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  perl-Digest-MD5-2.36.ebuild:
  Add ~x86-fbsd keyword.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  perl-Digest-MD5-2.33.ebuild, perl-Digest-MD5-2.36.ebuild:
  Updated RDEPENDS

*perl-Digest-MD5-2.36 (06 Feb 2006)
*perl-Digest-MD5-2.33 (06 Feb 2006)

  06 Feb 2006; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +perl-Digest-MD5-2.33.ebuild, +perl-Digest-MD5-2.36.ebuild:
  New virtual for perl-core/Digest-MD5
