@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-Digest-MD5
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Digest-MD5/ChangeLog,v 1.14 2006/10/25 02:26:23 mcummings Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Digest-MD5/ChangeLog,v 1.15 2008/06/07 12:05:03 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org>
+  perl-Digest-MD5-2.36.ebuild:
+  keyword ~sparc-fbsd
 
   25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
   -perl-Digest-MD5-2.33.ebuild:
